--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^19.2.3",
     "@google/genai": "^1.34.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "gh-pages": "^5.0.0"
+    "vite": "^6.2.0"
   }
 }
